Added kafka consumer to refresh user profile redis on update